# startup-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.simple  LICENSE  README.md  clippy.toml  docker-compose.yml
.github/workflows/: audit.yml  clippy-lint.yml  tests.yml
src/: main.rs  server.rs
src/api/: mod.rs
src/api/dev/: controller.rs  mod.rs  validator.rs
src/models/: dev_data.rs  mod.rs
src/tests/: examples.rs  integration.rs  mod.rs
src/util/: config.rs  database.rs  errors.rs  mod.rs  tools.rs
