[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 3 # 0-3
# opt-level = "s" # optimize for size
strip = 'symbols' # strip symbols from binary
lto = true # enable link time optimization
codegen-units = 1 # maximize size reduction optimizations

# use jemallocator memory allocator
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.63"
async-trait = "0.1.57"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
axum = "0.5.16"
lazy_static = "1.4.0"
