[package]
name = "startup-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 3   # 0-3
# opt-level = "s" # optimize for size
strip = 'symbols' # strip symbols from binary
lto = true        # enable link time optimization
codegen-units = 1 # maximize size reduction optimizations

# use jemallocator memory allocator
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

# [[bench]]
# name = "performance"
# harness = false
# html_reports = true

[dependencies]
actix-cors = "0.6.3"
actix-web = "4"
anyhow = "1.0.63"
async_once = "0.2.6"
async-trait = "0.1.57"
chrono = { version = "0.4.19", features = ["serde"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
futures = "0.3.24"
http = "0.2.8"
lazy_static = "1.4.0"
mongodb = { version = "2.3.1", features = ["tokio-sync", "tokio-runtime"] }
nanoid = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
criterion = "0.4"
